src/index.css
/* ... */
.x-button p {
  transform: rotate(0deg);
  display: block;
  margin: 0;
  color: black;
  transition: all 0.25s ease;
}

.x-button:hover {
  /* transform: rotate(180deg); */
  background-color: #2828287b;
  p {
    color: white;
    transform: rotate(360deg);
  }
}

.socials {
  display: flex;
  justify-content: space-around;
  gap: 8px;
}

.links {
  width: 8rem;
  display: flex;
  flex-direction: column;
  gap: 2px;
  justify-content: center;
  align-items: center;
  overflow-x: hidden;
}

.social-logo {
  width: 40px;
  height: 40px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  border-radius: 2px;
  cursor: pointer;
}

.insta {
  background-image: url(./assets/instagram.png);
}

.port {
  background-image: url(./assets/link.png);
}

.x {
  background-image: url(./assets/twitter.png);
}

.logo-text {
  margin-bottom: 0;
  margin-top: 5px;
  font-size: 0.7rem;
}

/* Notification Styling */
.notify-con {
  position: absolute;
  width: 100%;
  display: flex;
  justify-content: center;
  top: 100px;
  scale: 0;
  transition: all 0.2s ease-in-out;
  visibility: hidden;
  opacity: 0;
}

.scale {
  scale: 1;
  visibility: visible;
  opacity: 1;
}

.notify-con p {
  background-color: beige;
  padding: 5px 12px 5px 12px;
  border-radius: 5px;
  color: black;
  text-align: center;
  margin: 0;
  border-left: 5px solid rgb(114, 47, 71);
  font-size: 0.95rem;
}

/* Loading Bar Styling */
.loading-circle {
  display: flex;
  gap: 8px;
  justify-self: center;
  padding: 10px;
}

.cir {
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: rgb(117, 107, 95);
  animation: bounce 1s linear infinite;
}

.cir:nth-child(2) {
  animation: bounce 1s linear 0.2s infinite;
}
.cir:nth-child(3) {
  animation: bounce 1s linear 0.5s infinite;
}
.cir:nth-child(4) {
  animation: bounce 1s linear 0.8s infinite;
}

@keyframes bounce {
  0% {
    transform: translateY(0);
  }

  25% {
    transform: translateY(-2px);
  }
  50% {
    transform: translateY(0);
  }
  75% {
    transform: translateY(2px);
  }
  100% {
    transform: translateY(0);
  }
}

/* Alert Page */
.alert-body {
  width: 100%;
  height: 100dvh;
  background-color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  color: black;
}

.alert-contents {
  display: flex;
  flex-direction: column;
  gap: 10px;
  width: 90%;
}

.alert-message,
.alert-time {
  width: 100%;
  display: flex;
  justify-content: center;
}

.alert-message p {
  font-size: 2.5rem;
  text-align: center;
}

/* Extras */
.logo-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.logo-img {
  width: 80px;
  height: 80px;
  object-fit: cover;
  display: block;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #ae8eb1e5;
  }
}

@media (max-width: 800px) {
  .footer {
    grid-template-columns: 1fr 1fr;
  }
  .footer-logo {
    height: 190px;
  }
  .f {
    height: 20px;
    border-radius: 20px;
    padding: 8px 8px;
  }
  .footer-grid {
    gap: 10px;
  }
  .img-con {
    width: 90%;
  }
}

@media (max-width: 600px) {
  .about {
    font-size: 1.5rem;
    width: 70%;
  }
  .search-bnt::placeholder {
    font-size: 0.75rem;
  }
  .navbar .bar {
    font-size: 0.8rem;
    padding: 0.1rem;
    text-align: center;
    padding-top: 5px;
    padding-bottom: 5px;
  }
  .bnt {
    height: 1.8rem;
    width: 3.3rem;
    font-size: 0.55rem;
  }
  .bnt:hover {
    height: 1.9rem;
    width: 3.5rem;
  }
  .logo-img {
    width: 50px;
    height: 50px;
  }
  .img-contents {
    width: 100%;
  }
  .coll-list {
    width: 90vw;
    margin-top: 10px;
  }
  .tag-head {
    font-size: 0.8rem;
  }
  .artl {
    bottom: -30px;
    left: 15px;
  }
  .footer {
    grid-template-columns: 1fr 1fr;
  }
  .footer-logo {
    height: 180px;
  }
  .footer-grid > div:nth-child(n + 5) {
    display: none;
  }
  .footer-grid {
    grid-template-columns: 1fr;
  }
  .responsive-video {
    object-fit: cover;
  }
  .fixed-bot {
    width: 100%;
    right: 0px;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .wra {
    width: 92%;
  }
  .notify-con p {
    font-size: 0.85rem;
  }
  .alert-message p {
    font-size: 2.2rem;
  }
  .alert-time p {
    text-align: center;
  }
}

